- layout selector - Selectbox dependency % all layouts are listed in the single dropdown box, grouped by the language domain code % layouts are processed on demand, significantly reducing initialization time, it's a first step to the on-demand layout loading % node for the element width calculation is hidden by absolute positioning outside the visible document area % keyboard state is reset on the layout switch - support for setting next language and layout because of its useless - support for alt+shift, ctrl+shift keystrokes % rewritten getLayouts method, now it returns 2-dimensional array of layout codes and names + trow an error, if no layouts available + private __buildOptionsList method, called when list of the layouts has been changed + private __prepareLayout method, called to convert layout, before use - __init method, no need to use domload event in this case - unload handling because of the possible troubles in FireFox with page caching % rewritten methods to find path and script query, now they are using innerHTML and regexps, instead of buggy DOM methods + check for ScriptQueue existence % updated CSS files % demo_inline shows keyboard on the 'domload' event
git-svn-id: http://svn.debugger.ru/repos/jslibs/Virtual%20Keyboard/trunk@365 9a90dfcf-8112-0410-8cf2-8049563067c9

--- a/css/winxp/keyboard.css
+++ b/css/winxp/keyboard.css
@@ -237,20 +237,15 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
 }
 
 #virtualKeyboard select#kb_langselector {
-        right: 68px;
-        width: 45px;
-}
-#virtualKeyboard select#kb_layoutselector {
-        right: 2px;
-        width: 85px;
-}
-#virtualKeyboard select#kb_langselector, #virtualKeyboard select#kb_layoutselector {
-        bottom: 2px;
         border: 1px solid black;
+        bottom: 2px;
         position: absolute;
+        right: 2px;
+        width: 125px;
 }
-#virtualKeyboard select#kb_langselector, #virtualKeyboard select#kb_layoutselector,
-#virtualKeyboard select#kb_langselector option, #virtualKeyboard select#kb_layoutselector option {
+#virtualKeyboard select#kb_langselector
+#virtualKeyboard select#kb_langselector option {
+        background: #fff;
         font-family: Arial, Tahoma, Verdana sans-serif;
         font-size: 11px;
 }
